# BatteryOS

./: .gitmodules  README.md  Sources  Sources.md  design_doc  design_doc.md  sonnen_get_status.py
BatteryOS-V1/: BOSNode.py  Policy.py  Server.py  SonnenBattery.py  SplitterBattery.py
BatteryOS-V1/demo/: 3.conf  5.conf  6a.conf  6b.conf
BatteryOS-V1/doc/: JBD_REGISTER_MAP.md
BatteryOS-V2/: AggregatorBattery.cpp  AggregatorBattery.hpp  BALSplitter.cpp  BOS.cpp  BOSDirectory.hpp  BOSNode.hpp  CMakeLists.txt  Makefile  NetworkBattery.hpp  RD6006.hpp  RPC.cpp  example_client.cpp  iec61850.cpp  iec61850.hpp  main.cpp  sonnen.hpp  util.cpp  util.hpp
BatteryOS-V2/exp/: aggdelayloopback.csv  chaindelayfixedchainsample.csv  chaindelayfixedchainsample.txt  termoutaggloopback.txt
BatteryOS-V2/plugins/: BatteryStatus.h
BatteryOS-V2/protobuf/: CMakeLists.txt  battery_msg.proto
BatteryOS-V2/wiringSerial/: CMakeLists.txt  wiringSerial.c
BatteryOS-V3/: .gitignore
BatteryOS-V3/certs/: ca_cert.pem  client.key  client.pem  server.csr  server.pem
BatteryOS-V3/doc/: JBD_REGISTER_MAP.md
BatteryOS-V3/include/: BatteryDirectoryManager.hpp  BatteryInterface.hpp  Socket.hpp  scale.hpp
BatteryOS-V3/protobuf/: Makefile  battery.proto
BatteryOS-V3/src/: AggregateBattery.cpp  Aggregator.cpp  BatteryDirectory.cpp  BatteryStatus.cpp  Connections.cpp  DynamicBattery.cpp  PartitionManager.cpp  PseudoBattery.cpp  RD6006.cpp  SecureBattery.cpp  Socket.cpp  util.cpp
BatteryOS-V3/tests/: aggregator.cpp  fifo.cpp  install_pkg_config.sh  testMerge.cpp  testPseudo.cpp
bos_rewrite/: .gitignore  README.md
bos_rewrite/certs/: ca_cert.srl  client.csr  server.key
bos_rewrite/doc/: LH_communication_protocol.xlsx
bos_rewrite/include/: Acceptor.hpp  Admin.hpp  Aggregator.hpp  BOS.hpp  BatteryConnection.hpp  BatteryInterface.hpp  BatteryStatus.hpp  ClientBattery.hpp  Connections.hpp  Fifo.hpp  NetService.hpp  PhysicalBattery.hpp  ProtoParameters.hpp  PseudoBattery.hpp  SecureBattery.hpp  SecureClient.hpp  SecureClientBattery.hpp  Socket.hpp  Stream.hpp  TLSSocket.hpp  event_t.hpp  iec61850.hpp  node.hpp  util.hpp
bos_rewrite/protobuf/: Makefile  battery.pb.cc  battery.pb.h  battery.proto  battery_manager.pb.cc  battery_manager.pb.h  battery_manager.proto  main.cpp
bos_rewrite/src/: Acceptor.cpp  Admin.cpp  Admin.hpp  AggregateBattery.cpp  AggregateBattery.hpp  BOS.cpp  BOS.hpp  BatteryConnection.cpp  BatteryDirectory.cpp  BatteryDirectory.hpp  BatteryDirectoryManager.cpp  BatteryDirectoryManager.hpp  BatteryInterface.cpp  BatteryInterface.hpp  BatteryStatus.cpp  BatteryStatus.hpp  ClientBattery.cpp  ClientBattery.hpp  DynamicBattery.cpp  DynamicBattery.hpp  Fifo.cpp  FifoBattery.cpp  FifoBattery.hpp  NetService.cpp  PartitionBattery.cpp  PartitionBattery.hpp  PartitionManager.cpp  PartitionManager.hpp  PhysicalBattery.cpp  ProtoParameters.cpp  ProtoParameters.hpp  PseudoBattery.cpp  README.md  SecureClient.cpp  SecureClientBattery.cpp  Socket.cpp  TLSSocket.cpp  VirtualBattery.cpp  VirtualBattery.hpp  iec61850.cpp  (+3 more)
bos_rewrite/tests/: Makefile  README.md  install_protobuf.sh  install_python_config.sh  secureSocket.cpp  socket.cpp  testAggregate.cpp  testDirectory.cpp  testDirectoryManager.cpp  testDynamic.cpp  testFifo.cpp  testJBDBMS.cpp  testPartition.cpp  testSecureSocket.cpp  testSocket.cpp
bosinc/: AggregatorBattery.cpp  AggregatorBattery.hpp  BALSplitter.cpp  BALSplitter.hpp  BOS.cpp  BOS.hpp  BOSDirectory.hpp  BOSNode.h  BOSNode.hpp  BatteryInterface.cpp  BatteryInterface.hpp  BatteryStatus.cpp  BatteryStatus.h  CMakeLists.txt  Connections.hpp  CurrentRegulator.hpp  Dynamic.hpp  JBDBMS.cpp  JBDBMS.hpp  Makefile  NetworkBattery.hpp  Policy.hpp  ProportionalPolicy.hpp  ProtobufMsg.cpp  ProtobufMsg.hpp  RD6006.hpp  RPC.cpp  RPC.hpp  Remote.hpp  ReservedPolicy.hpp  SplittedBattery.hpp  SplitterPolicy.hpp  TestBattery.hpp  bosrunnerexp.py  build_dependency_tree.py  client.cpp  example_client.cpp  fakerequester.hpp  main.cpp  remote_tester.cpp  (+3 more)
bosinc/data/: experiment1-2500.txt  experiment1-3500-notgood.txt  experiment1-charge2000.txt  experiment1-charge2kW-notgood.txt  experiment1-new_-2500.000000W.csv  experiment1_-2000.000000W-1.csv  experiment1_-2000.000000W-notgood.csv  experiment1_2500.000000W.csv  experiment1_3500.000000W-notgood.csv  experiment2.txt  experiment2_4000.000000W.csv  experiment3-both-discharge.txt  experiment3-charge-discharge.txt  experiment3_1000.000000W_1500.000000W.csv  experiment3_1000.000000W_1500.000000W_fixed.csv  experiment3_2000.000000W_-1000.000000W.csv  experiment3_fixed_egauge.csv  experiment3_fixed_terminal.txt  experiment4-1.txt  experiment4-2.txt  experiment4_2000.000000W_1500.000000W-1.csv  experiment4_2000.000000W_1500.000000W-2.csv  experiment5.txt  experiment5_2000.000000W_2500.000000W.csv
bosinc/example/: CMakeLists.txt  dynamicnull.c
bosinc/exp/: aggdelay.csv  chaindelay.csv  chaineddelaywithsimulatedrtt.csv  delay.py  fixedchaineddelaywithsimulatedrtt.csv
bosinc/exp/plots/: calculate_ping_latencies.py  ping_latencies.csv
bosinc/include/: wiringSerial.c
bosinc/plugins/: CMakeLists.txt  dynamicnull.c  fakedelay.cpp  sonnen.cpp
bosinc/protobuf/: CMakeLists.txt  admin_msg.proto  battery_msg.proto  battery_status.proto
bosinc/python/: rd6006.cpp  rd6006.py  rd6006_c.py
bosinc/unused/: Makefile  unused.h
bosinc/wiringSerial/: CMakeLists.txt
transformer_protection/: MPC_Test.ipynb  batteries.py  boxplot.ipynb  case_1.py  case_2.py  case_3.py  case_4.py  case_4_1.py  case_4_2.py  case_4_3.py  coptAgg.py  dataset.py  discharge.py  getFiles.py  mpc.ipynb  mpc.py  mpc_example.py  optimization.py  optimization_MPC.py  optimize_aggregate.py  optimize_aggregate_old.py  optimize_individual.py  pStar.py  plot_case_1_3.py  transformer_model_oil.py
trustder/: BOS.py  BOSControl.py  BOSErr.py  BOSNode.py  BatteryDAG.py  BatteryInterface.py  Interface.py  Interpreter.py  JBDBMS.py  JBD_REGISTER_MAP.md  Policy.py  README.md  Server.py  SonnenBattery.py  VirtualBattery.py  util.py
trustder/demo/: 2.conf  (+4 more)
unused/: Sonnen.py  SonnenBattery.hpp
(+12 files in other folders)
